<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:text="Name: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newTaskModal_namelabel"
        android:textSize="24sp"
        android:layout_marginLeft="77dp"
        android:layout_marginStart="77dp"
        android:layout_marginTop="72dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBottom="@+id/newTaskModal_namelabel"
        android:layout_toRightOf="@+id/newTaskModal_namelabel"
        android:layout_toEndOf="@+id/newTaskModal_namelabel"
        android:id="@+id/newTaskModal_nametextbox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignBottom="@+id/newTaskModal_typelabel"
        android:layout_toRightOf="@+id/newTaskModal_namelabel"
        android:layout_toEndOf="@+id/newTaskModal_namelabel"
        android:id="@+id/newTaskModal_typetextbox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/newTaskModal_typetextbox"
        android:layout_toRightOf="@+id/newTaskModal_fromtimelabel"
        android:layout_toEndOf="@+id/newTaskModal_fromtimelabel"
        android:id="@+id/newTaskModal_fromtimetextbox" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/newTaskModal_totimetextbox"
        android:layout_alignBaseline="@+id/newTaskModal_totimelabel"
        android:layout_alignBottom="@+id/newTaskModal_totimelabel"
        android:layout_toRightOf="@+id/newTaskModal_fromtimelabel"
        android:layout_toEndOf="@+id/newTaskModal_fromtimelabel" />

    <TextView
        android:text="From Time: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newTaskModal_fromtimelabel"
        android:textSize="24sp"
        android:layout_alignBaseline="@+id/newTaskModal_fromtimetextbox"
        android:layout_alignBottom="@+id/newTaskModal_fromtimetextbox"
        android:layout_toLeftOf="@+id/newTaskModal_typetextbox"
        android:layout_toStartOf="@+id/newTaskModal_typetextbox" />

    <TextView
        android:text="Type: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newTaskModal_typelabel"
        android:textSize="24sp"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/newTaskModal_namelabel"
        android:layout_toLeftOf="@+id/newTaskModal_typetextbox"
        android:layout_toStartOf="@+id/newTaskModal_typetextbox" />

    <TextView
        android:text="To Time: "
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/newTaskModal_totimelabel"
        android:textSize="24sp"
        android:layout_below="@+id/newTaskModal_fromtimetextbox"
        android:layout_toLeftOf="@+id/newTaskModal_fromtimetextbox"
        android:layout_toStartOf="@+id/newTaskModal_fromtimetextbox" />

    <Button
        android:text="Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newTaskModal_totimetextbox"
        android:layout_alignLeft="@+id/newTaskModal_typelabel"
        android:layout_alignStart="@+id/newTaskModal_typelabel"
        android:id="@+id/newTaskModal_cancelbutton" />

    <Button
        android:text="Add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/newTaskModal_cancelbutton"
        android:layout_toRightOf="@+id/newTaskModal_cancelbutton"
        android:layout_toEndOf="@+id/newTaskModal_cancelbutton"
        android:id="@+id/newTaskModal_addbutton" />

</RelativeLayout>