<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_task"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.brandon.tasktrack.TaskActivity">


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/main_statsbutton"
        android:id="@+id/tasklist" />

    <Button
        android:id="@+id/main_statsbutton"
        android:text="Statistics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="toStatistics">
    </Button>

    <Button
        android:text="Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tasklist"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/main_settingsbutton"
        android:onClick="toSettingsModal"/>

    <Button
        android:text="Add Task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tasklist"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/main_addtaskbutton"
        android:onClick="toAddTaskModal" />
</RelativeLayout>